--- a/css/style.scss
+++ b/css/style.scss
@@ -578,7 +578,7 @@
     
     #contact {
         color: white;
-        background-image: url(/image/contact.png);
+        background-image: url(./image/contact.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
