--- a/css/style.css
+++ b/css/style.css
@@ -1249,4 +1249,12 @@ footer {
   footer {
     text-align: center;
   }
+}
+.fade-in {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-in.visible {
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
